# metroscope.nvim

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  TODO.md  metroscope-hayai.md  metroscope.md
.metro/: context.json  tree.json
.metroscope/: index.json
.serena/: project.yml
crates/metroscope-hayai/: Cargo.toml
crates/metroscope-hayai/src/: init.rs  main.rs  mcp.rs  mcp_server.rs  ollama.rs  store.rs  types.rs
crates/metroscope-indexer/: Cargo.toml
crates/metroscope-indexer/src/: color.rs  llm.rs  main.rs  serena.rs
crates/metroscope-indexer/src/parser/: mod.rs  rust.rs
crates/metroscope-server/: Cargo.toml
crates/metroscope-server/src/: export.rs  main.rs  map.rs
crates/metroscope-types/: Cargo.toml
crates/metroscope-types/src/: lib.rs
neovim/metroscope.nvim/: .luarc.json
neovim/metroscope.nvim/lua/metroscope/: highlights.lua  info.lua  init.lua  navigation.lua  render.lua  state.lua  stations.lua  util.lua  window.lua
neovim/metroscope.nvim/lua/promptline/: backend.lua  fork.lua  init.lua  metroscope.lua  replace.lua  session.lua  ui.lua  watcher.lua
neovim/metroscope.nvim/plugin/: metroscope.lua
neovim/promptline/: CLAUDE.md
neovim/promptline/lua/promptline/: fork.lua  init.lua  metroscope.lua
