[workspace]
members = [
    "crates/metroscope-types",
    "crates/metroscope-indexer",
    "crates/metroscope-server",
    "crates/metroscope-hayai",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
