[package]
name = "metroscope-hayai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hayai"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = "0.8"
