[package]
name = "metroscope-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metroscope-indexer"
path = "src/main.rs"

[dependencies]
metroscope-types = { path = "../metroscope-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
streaming-iterator = "0.1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
